office-kubernetes/kustomize/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    shared-web-gateway-access: "true"
