office-kubernetes/kustomize/gateway-api/web-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: main-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      hostname: "*.k8s.local-k8s.tech"
      port: 443
      name: web-https
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: local-k8s-tech-tls
    - protocol: HTTP
      port: 80
      name: web-http
      allowedRoutes:
        namespaces:
          from: All
